# tiny-spec

./: .gitignore  PLAN.md  README.md  backlog.md  pyproject.toml  skill.md
.spec/: README.md  config.yaml  constitution.md  git-context.md  log.md
.spec/specs/: 0001-agent-output-ergonomics-help-counts-truncation.md  0002-rename-kata-to-checks-run-kata-to-spec-verify.md  0003-spec-doctor-spec-graph-validator.md  0004-spec-claim-worktree-parallel-agent-isolation.md  0005-agentsmd-scaffold-sessionstart-hook.md  0006-repo-hygiene-ci-ruff-config-own-agentsmd.md  0007-cli-smoke-tests-skill-drift-test.md  0008-gate-modes-local-draft-pr.md  0009-no-mistakes-integration-as-pluggable-gate-engine.md  0010-spec-pr-body-generate-intentriskevidence-from-a-sp.md  0011-tracer-bullet-ac-ordered-vertical-slices-in-featur.md  0012-gate-split-agent-verifiable-checks-vs-human-only-d.md
memory/: state.md
src/spec_cli/: SKILL.md  config.py  constitution.py  main.py  models.py  state.py  storage.py  ui.py
tasks/: 001-json-non-interactive.md  002-agent-output-ergonomics.md  003-rename-kata-to-checks.md  004-spec-doctor.md  005-claim-worktree.md  006-agents-md-scaffold.md  007-repo-ci-hygiene.md  008-cli-smoke-tests.md
tests/: test_agent_output_ergonomics.py  test_agents_md_scaffold.py  test_claim_worktree.py  test_doctor.py  test_gate_modes.py  test_gate_split.py  test_glossary.py  test_json_non_interactive.py  test_list_broken_files_warning.py  test_not_initialized_guard.py  test_pr_body.py  test_storage.py  test_tracer_bullet_ac.py  test_verify_checks_rename.py
(+42 files in other folders)
